--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>❤️ Valentine Web CTF</title>
+  <title>❤️ Affection Overflow CTF</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 700px; margin: 60px auto; }
     .card { padding: 20px; border: 1px solid #ddd; border-radius: 14px; }
