--- a/public/easy/index.html
+++ b/public/easy/index.html
@@ -17,7 +17,7 @@
     <p id="status">Cupid says: Not approved yet 💔</p>
     <button id="refresh">Try Again</button>
 
-    <div id="flag" class="flag">FLAG{valentines_localstorage_switch}</div>
+    <div id="flag" class="flag">FLAG{flipped_4_u}</div>
 
     <div class="hint">
       Hint: “Cupid remembers things in your browser…”
