--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,180 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>❤️ Affection Overflow</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body { font-family: Arial, sans-serif; max-width: 700px; margin: 60px auto; }
-    .card { padding: 20px; border: 1px solid #ddd; border-radius: 14px; }
-    li { margin: 10px 0; }
+    :root{
+      --bg:#060814; --card:#0f1730; --pink:#ff3ea5; --cyan:#31e7ff;
+      --text:#e7ecff; --muted:#93a0c2; --line:rgba(49,231,255,.20);
+    }
+    body{
+      margin:0; min-height:100vh; font-family: ui-sans-serif, system-ui, Arial;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 700px at 15% 10%, rgba(255,62,165,.20), transparent 55%),
+        radial-gradient(900px 600px at 85% 35%, rgba(49,231,255,.16), transparent 55%),
+        linear-gradient(180deg, var(--bg), #02030a);
+      overflow-x:hidden;
+    }
+    .wrap{width:min(980px,92vw); margin:48px auto; padding:0 8px;}
+    .topline{
+      display:flex; align-items:center; justify-content:space-between; gap:12px; flex-wrap:wrap;
+      letter-spacing:.12em; text-transform:uppercase; font-size:12px; color:var(--muted);
+    }
+    .badge{
+      border:1px solid var(--line);
+      border-radius:999px;
+      padding:8px 12px;
+      background: rgba(3,6,18,.55);
+    }
+    .hero{
+      margin-top:14px;
+      border:1px solid rgba(255,62,165,.18);
+      border-radius:18px;
+      padding:18px;
+      background: linear-gradient(180deg, rgba(15,23,48,.92), rgba(8,10,20,.92));
+      box-shadow: 0 20px 60px rgba(0,0,0,.55);
+      position:relative; overflow:hidden;
+    }
+    .hero:before{
+      content:"";
+      position:absolute; inset:-2px;
+      background:
+        radial-gradient(480px 240px at 18% 15%, rgba(255,62,165,.18), transparent 60%),
+        radial-gradient(420px 240px at 85% 70%, rgba(49,231,255,.14), transparent 60%);
+      pointer-events:none;
+    }
+    h1{margin:0 0 6px; font-size:34px; position:relative;}
+    .sub{margin:0; color:var(--muted); line-height:1.6; position:relative;}
+    .grid{
+      margin-top:16px;
+      display:grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap:12px;
+    }
+    .card{
+      grid-column: span 12;
+      border:1px solid var(--line);
+      border-radius:18px;
+      padding:16px;
+      background: rgba(15,23,48,.75);
+      box-shadow: 0 14px 40px rgba(0,0,0,.40);
+    }
+    @media (min-width: 860px){
+      .card{grid-column: span 4;}
+    }
+    .title{
+      display:flex; align-items:center; justify-content:space-between; gap:10px;
+      margin:0 0 8px;
+      font-size:18px;
+    }
+    .pill{
+      font-size:12px;
+      color:var(--text);
+      border-radius:999px;
+      padding:6px 10px;
+      border:1px solid rgba(255,62,165,.22);
+      background: rgba(255,62,165,.07);
+      white-space:nowrap;
+    }
+    .desc{margin:8px 0 12px; color:var(--muted); line-height:1.55;}
+    .btnrow{display:flex; gap:10px; flex-wrap:wrap;}
+    a.btn{
+      display:inline-block;
+      text-decoration:none;
+      border-radius:14px;
+      padding:10px 12px;
+      font-weight:700;
+      color:#071022;
+      background: linear-gradient(90deg, rgba(255,62,165,.95), rgba(49,231,255,.85));
+      box-shadow: 0 10px 30px rgba(255,62,165,.18);
+    }
+    a.btn.secondary{
+      color:var(--text);
+      background: rgba(3,6,18,.55);
+      border:1px solid var(--line);
+      box-shadow:none;
+      font-weight:600;
+    }
+    .footer{
+      margin-top:16px;
+      display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between;
+      color:var(--muted);
+      border-top:1px solid rgba(49,231,255,.12);
+      padding-top:14px;
+    }
+    .tiny{font-size:12px; opacity:.9;}
+    code{font-family: ui-monospace, Menlo, Consolas, monospace; color:#fff;}
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>❤️ Affection Overflow</h1>
-    <p>Welcome! Choose a challenge:</p>
-    <ul>
-      <li><a href="/easy">💝 Sweetheart Switch (Easy)</a></li>
-      <li><a href="/medium">💘 Matchmaker Mix-Up (Medium)</a></li>
-      <li><a href="/hard">💌 Love Note Renderer (Hard)</a></li>
-    </ul>
-    <p style="opacity:.7;">Happy hacking 💕</p>
+  <div class="wrap">
+    <div class="topline">
+      <div>Affection Overflow</div>
+      <div class="badge">Romantic Cyberpunk • Web</div>
+    </div>
+
+    <div class="hero">
+      <h1>❤️ Affection Overflow</h1>
+      <p class="sub">
+        Three broken love apps in a neon city. Three tiny mistakes. Three flags.
+        <br/>Pick a challenge, follow the clues, and don’t trust what the browser tells you.
+      </p>
+      <p class="sub tiny" style="margin-top:10px;">
+        Tip: Most flags look like <code>flag{...}</code>
+      </p>
+    </div>
+
+    <div class="grid">
+      <div class="card">
+        <div class="title">
+          <span>💝 Sweetheart Switch</span>
+          <span class="pill">Easy</span>
+        </div>
+        <p class="desc">
+          Cupid stores approval in your browser. If you can “convince” it… the secret shows up.
+        </p>
+        <div class="btnrow">
+          <a class="btn" href="/easy">Launch</a>
+          <a class="btn secondary" href="/easy">Hint: browser storage</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="title">
+          <span>💘 Matchmaker Mix-Up</span>
+          <span class="pill">Medium</span>
+        </div>
+        <p class="desc">
+          Secret admirer messages are fetched by ID. You’re supposed to see only yours… but the URL disagrees.
+        </p>
+        <div class="btnrow">
+          <a class="btn" href="/medium?id=1">Launch</a>
+          <a class="btn secondary" href="/medium?id=2">Try another ID</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="title">
+          <span>💌 Love Note Renderer</span>
+          <span class="pill">Hard</span>
+        </div>
+        <p class="desc">
+          A note renderer that “interprets” what you type. Sometimes rendering is… too helpful.
+        </p>
+        <div class="btnrow">
+          <a class="btn" href="/hard">Launch</a>
+          <a class="btn secondary" href="/hard?note=%7B%7Bsecret%7D%7D">Try a token</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="tiny">Made for a Valentine CTF • Neon hearts, real bugs 💗</div>
+      <div class="tiny">Decoy links: <a style="color:var(--cyan);text-decoration:none" href="/rosebud">/rosebud</a> • <a style="color:var(--cyan);text-decoration:none" href="/admin-love">/admin-love</a></div>
+    </div>
   </div>
 </body>
 </html>
