--- a/public/index.html
+++ b/public/index.html
@@ -170,5 +170,8 @@
         </div>
       </div>
     </div>
+
+  <div class="footer">
+      <div class="tiny">Made for a Valentine CTF • Neon hearts, real bugs 💗</div>
 </body>
 </html>
