--- a/public/rosebud/index.html
+++ b/public/rosebud/index.html
@@ -1,6 +1,78 @@
 <!doctype html>
-<html><head><meta charset="utf-8"><title>rosebud</title></head>
-<body style="font-family:Arial;max-width:720px;margin:40px auto;">
-  <h2>🌹 rosebud</h2>
-  <p>Just a decoy. The real romance is in <a href="/">Affection Overflow</a>.</p>
-</body></html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <title>rosebud</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <style>
+    :root{--bg:#060814;--card:#0f1730;--pink:#ff3ea5;--cyan:#31e7ff;--text:#e7ecff;--muted:#93a0c2;}
+    body{
+      margin:0; min-height:100vh; display:flex; align-items:center; justify-content:center;
+      font-family:system-ui,Arial; color:var(--text);
+      background:
+        radial-gradient(1100px 650px at 15% 10%, rgba(255,62,165,.20), transparent 55%),
+        radial-gradient(900px 600px at 85% 35%, rgba(49,231,255,.16), transparent 55%),
+        linear-gradient(180deg, var(--bg), #02030a);
+    }
+    .wrap{width:min(900px,92vw); padding:24px;}
+    .brand{letter-spacing:.12em;text-transform:uppercase;font-size:12px;color:var(--muted);}
+    .card{
+      margin-top:10px; background:rgba(15,23,48,.92);
+      border:1px solid rgba(49,231,255,.22);
+      border-radius:18px; padding:18px;
+      box-shadow:0 20px 60px rgba(0,0,0,.55);
+    }
+    h1{margin:0 0 8px;font-size:26px;}
+    p{margin:10px 0;color:var(--muted);line-height:1.55;}
+    .imgbox{
+      margin-top:14px; border-radius:16px; overflow:hidden;
+      border:1px solid rgba(255,62,165,.25);
+      background: rgba(255,62,165,.06);
+    }
+    img{width:100%; display:block;}
+    .terminal{
+      margin-top:14px;
+      border-radius:16px;
+      border:1px solid rgba(49,231,255,.18);
+      background:rgba(3,6,18,.55);
+      padding:14px;
+      font-family: ui-monospace, Menlo, Consolas, monospace;
+      color:#dbe6ff;
+    }
+    .line{opacity:.9;}
+    .pink{color:var(--pink);}
+    .cyan{color:var(--cyan);}
+    a{color:var(--cyan); text-decoration:none;}
+    .row{display:flex; gap:10px; flex-wrap:wrap; margin-top:12px;}
+    .pill{
+      display:inline-block; padding:8px 12px; border-radius:999px;
+      border:1px solid rgba(49,231,255,.22); background:rgba(3,6,18,.55);
+      color:var(--text);
+    }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <div class="brand">Affection Overflow • node: rosebud</div>
+    <div class="card">
+      <h1>🌹 ROSEBUD ACCESS PANEL</h1>
+      <p>Legacy endpoint detected. Authorization handshake required.</p>
+
+      <div class="imgbox">
+        <img src="/assets/husky-point.jpg" alt="Husky pointing meme">
+      </div>
+
+      <div class="terminal">
+        <div class="line"><span class="cyan">[scan]</span> endpoint=/rosebud status=<span class="pink">UNKNOWN</span></div>
+        <div class="line"><span class="cyan">[hint]</span> try enumerating paths, parameters, or stored client state</div>
+        <div class="line"><span class="cyan">[dog]</span> “you. yeah you. check the browser.”</div>
+      </div>
+
+      <div class="row">
+        <span class="pill">Tip: this page is supposed to feel “real.”</span>
+        <a class="pill" href="/">Return to hub</a>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
