--- a/public/easy/index.html
+++ b/public/easy/index.html
@@ -84,7 +84,7 @@
         <div class="pill">Signal: <span id="sig">LOW</span></div>
       </div>
 
-      <div id="flag" class="flag">flag{flipped_4_u}</div>
+      <div id="flag" class="flag"></div>
 
       <div class="hint">
         Hint: Cupid remembers decisions <b>inside your browser</b>.
@@ -111,13 +111,26 @@
     }
 
     function render() {
-      const ok = localStorage.getItem("sweetheartApproved") === "true";
-      document.getElementById("status").textContent = ok
-        ? "Cupid says: Approved 💖"
-        : "Cupid says: Not approved yet 💔";
-      document.getElementById("sig").textContent = ok ? "HIGH" : "LOW";
-      document.getElementById("flag").style.display = ok ? "block" : "none";
-    }
+  const ok = localStorage.getItem("sweetheartApproved") === "true";
+
+  document.getElementById("status").textContent = ok
+    ? "Cupid says: Approved 💖"
+    : "Cupid says: Not approved yet 💔";
+
+  document.getElementById("sig").textContent = ok ? "HIGH" : "LOW";
+
+  const flagBox = document.getElementById("flag");
+
+  if (ok) {
+    // Flag only created AFTER condition is met
+    flagBox.textContent = "flag{flipped_4_u}";
+    flagBox.style.display = "block";
+  } else {
+    flagBox.textContent = "";
+    flagBox.style.display = "none";
+  }
+}
+
 
     document.getElementById("refresh").addEventListener("click", render);
     render();
